Make ZGC the default