@@ -119,7 +119,8 @@ jpackage {
                    '-Dfile.encoding=UTF-8',
                    '-splash:$APPDIR/startup.png',
                    '-Xms256m',
-                   '-Xmx1024m',
+                   '-Xmx1g',
+                   '-XX:+UseZGC',
                    '-XX:MaxMetaspaceSize=256m',
                    '-XX:+UseCompactObjectHeaders',
                    '-Dvisualvm.display.name=Xeres',
